--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,11 @@ nav a.navbar-brand {
 	background-color: rgb(151, 82, 151);
 }
 
+a i {
+	font-size: 4rem;
+	color: rgb(151, 82, 151);
+}
+
 div.about-me,
 div.portfolio,
 div.contact {
