--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,16 @@
+/* Google Font Import */
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+/* body background color and gradient */
 body {
 	background: rgb(238, 174, 202);
 	background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(227, 191, 236, 1) 100%);
 }
 
+/* navbar */
 nav.navbg {
 	border-bottom: 2px solid rgb(151, 82, 151);
-	background-color: plum;
+	background-color: rgb(221, 160, 221);
 }
 
 nav a.navbar-brand {
@@ -15,17 +18,24 @@ nav a.navbar-brand {
 	background-color: rgb(151, 82, 151);
 }
 
+/* social media icons */
 a i {
 	font-size: 4rem;
 	color: rgb(151, 82, 151);
 }
 
+i:hover {
+    opacity: 0.7;
+}
+
+/* container color */
 div.about-me,
 div.portfolio,
 div.contact {
 	background-color: rgb(252, 244, 251);
 }
 
+/* name overlay for portfolio items */
 div.portfolio-item h2 {
 	position: relative;
 	top: 75%;
@@ -33,6 +43,7 @@ div.portfolio-item h2 {
 	background-color: rgba(247, 171, 234, 0.8);
 }
 
+/* footer */
 footer.footer {
-	background-color: plum;
+	background-color: rgb(221, 160, 221);
 }
